--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>DG coxinhas</title>
 </head>
 <body>
-    <h1>dg coxinhas</h1>
+    <h1>DG coxinhas</h1>
     <h6>dg coxinhas</h6>
 </body>
 </html>
