--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>DG coxinhas</h1>
     <h6>dg coxinhas</h6>
     <P>DG coxinhas</P>
-    <img src="Picsart_24-02-08_08-43-05-595 .png" alt="">
+    <img src="Picsart_24-02-08_08-43-05-595 1.png" alt="">
 </body>
 </html>
