--- a/index.html
+++ b/index.html
@@ -10,5 +10,15 @@
     <h6>dg coxinhas</h6>
     <P>DG coxinhas</P>
     <img src="Picsart_24-02-08_08-43-05-595 1.png" alt="nossa logo coxinha hello kitty">
-</body>
-</html>
+<header>
+    <h1>DG coxinhas</h1><!--hello-->
+     <h6>GRSZ\</h6>
+     <P>GRS\GR\</P> 
+     <img class="Ilustração" src="./Coxinha.jfif" alt="Coxinha">
+ </header>
+ <section>
+    <h2>conheça nosso site</h2>
+    <p>Lanchonete especializada em coxinhas (doces e salgadas), sem deixar a diversão de lado. Venham se deliciar com nossas incríveis coxinhas!!</p>
+ </section>
+ </body>
+ </html>
